--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "date-fns-tz": "^1.3.7",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
